added the laser time series

--- a/random_shannon_fcns.ipynb
+++ b/random_shannon_fcns.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "id": "4460b153-0e82-4590-a97f-d72a934e6bd6",
    "metadata": {},
    "outputs": [],
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "id": "6159436b-07f9-440f-965b-954c95b1eeff",
    "metadata": {},
    "outputs": [],
@@ -863,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "4a51657a-4a26-4bec-86a8-4124db632522",
    "metadata": {},
    "outputs": [],
@@ -873,6 +873,14 @@
     "    traj = [x_0]\n",
     "    for i in range(1, max_iter):\n",
     "        x = r * traj[i-1] * (1 - traj[i-1])\n",
+    "        traj.append(x)\n",
+    "    return np.array(traj, dtype=np.float32)\n",
+    "\n",
+    "def laser(g, x_0, max_iter=1000):\n",
+    "    \"\"\"Generates a time series using the logistic map equation.\"\"\"\n",
+    "    traj = [x_0]\n",
+    "    for i in range(1, max_iter):\n",
+    "        x = g * traj[i-1] * (1 - np.tanh(traj[i-1]))\n",
     "        traj.append(x)\n",
     "    return np.array(traj, dtype=np.float32)\n",
     "\n",
@@ -910,14 +918,6 @@
     "    x = np.asarray(x, dtype=float)\n",
     "    return np.sin(2*np.pi*(phi*x + psi/2*x**2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b4481c9c-f87f-4e9f-a5da-6eb6631ae50b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
