added bifurcation stuff

--- a/random_shannon_fcns.ipynb
+++ b/random_shannon_fcns.ipynb
@@ -876,7 +876,7 @@
     "        traj.append(x)\n",
     "    return np.array(traj, dtype=np.float32)\n",
     "\n",
-    "def laser(g, x_0, max_iter=1000):\n",
+    "def laser_map(g, x_0, max_iter=1000):\n",
     "    \"\"\"Generates a time series using the logistic map equation.\"\"\"\n",
     "    traj = [x_0]\n",
     "    for i in range(1, max_iter):\n",
@@ -918,6 +918,67 @@
     "    x = np.asarray(x, dtype=float)\n",
     "    return np.sin(2*np.pi*(phi*x + psi/2*x**2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "c9f94387-56f9-4f30-a383-0cdc35623d2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_bifur_logistic(param_values, x0=0.5, iter_trans=1000, iter_plot=256):\n",
+    "    \"\"\"\n",
+    "        Plots the bifurcation diagram for logistic map.\n",
+    "    \"\"\"\n",
+    "    iter_total = iter_trans + iter_plot\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(15,8), dpi=150)\n",
+    "\n",
+    "    for r in param_values:\n",
+    "        X = logistic_map(r, x0, iter_total)\n",
+    "        attractors = X[iter_trans:]\n",
+    "        plot_values_r = np.full(iter_plot, r)\n",
+    "\n",
+    "        ax.plot(plot_values_r, attractors,\n",
+    "                marker=',', color='black', linestyle='none', alpha=0.5)\n",
+    "\n",
+    "    ax.set_title(\"Bifurcation Diagram of the Logistic Map\", fontsize=16)\n",
+    "    ax.set_xlabel(\"Growth Rate Parameter (r)\", fontsize=12)\n",
+    "    ax.set_ylabel(\"Equilibrium Population (x)\", fontsize=12)\n",
+    "    ax.set_xlim(param_values[0], param_values[-1])\n",
+    "    ax.set_ylim(0, 1)\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_bifur_laser(param_values, x0=0.5, iter_trans=1000, iter_plot=256):\n",
+    "    \"\"\"\n",
+    "        Plots the bifurcation diagram for logistic map.\n",
+    "    \"\"\"\n",
+    "    iter_total = iter_trans + iter_plot\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(15,8), dpi=150)\n",
+    "\n",
+    "    for r in param_values:\n",
+    "        X = laser_map(r, x0, iter_total)\n",
+    "        attractors = X[iter_trans:]\n",
+    "        plot_values_r = np.full(iter_plot, r)\n",
+    "\n",
+    "        ax.plot(plot_values_r, attractors,\n",
+    "                marker=',', color='black', linestyle='none', alpha=0.5)\n",
+    "\n",
+    "    ax.set_title(\"Bifurcation Diagram of the Logistic Map\", fontsize=16)\n",
+    "    ax.set_xlabel(\"Growth Rate Parameter (r)\", fontsize=12)\n",
+    "    ax.set_ylabel(\"Equilibrium Population (x)\", fontsize=12)\n",
+    "    ax.set_xlim(param_values[0], param_values[-1])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "460b4246-5f09-4c41-8256-cb21ac3a6aa5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
