updates to subspace tracking

--- a/random_shannon_fcns.ipynb
+++ b/random_shannon_fcns.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "54c92819-1a26-4714-b8d5-61cb895a91f3",
    "metadata": {},
    "outputs": [],
@@ -447,8 +447,12 @@
     "    return mse, r2, X_hat\n",
     "\n",
     "# needs to be fixed\n",
-    "def pca_cross_recon_loss(X, pca_enc, pca_dec, k): #also use it two compare subspace alignment\n",
-    "    # k number of prin. comp.\n",
+    "def pca_cross_recon_loss(X, pca_enc, pca_dec, k): \n",
+    "    \"\"\"\n",
+    "        Calculates cross reconstruction loss for PCA. If pca_enc, pca_dec come from the same affine PCA transformation\n",
+    "        then it returns the regular reconstruction loss. They are related to each other by \n",
+    "        Z = (X - mu)B and X = ZB^T + mu\n",
+    "    \"\"\"\n",
     "    B_enc, mu_enc = pca_enc.components_[:k].T, pca_enc.mean_\n",
     "    B_dec, mu_dec = pca_dec.components_[:k].T, pca_dec.mean_\n",
     "\n",
