minor fixes and lorenz63

--- a/random_shannon_fcns.ipynb
+++ b/random_shannon_fcns.ipynb
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "54c92819-1a26-4714-b8d5-61cb895a91f3",
    "metadata": {},
    "outputs": [],
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "4a51657a-4a26-4bec-86a8-4124db632522",
    "metadata": {},
    "outputs": [],
@@ -903,6 +903,41 @@
     "    dzdt = x * y - beta * z\n",
     "    return [dxdt, dydt, dzdt]\n",
     "\n",
+    "def generate_lorenz(initial_state=[1.0, 0.0, 0.0], sigma=10.0, rho=28.0, beta=8.0/3.0, dt=0.01, num_steps=10000):\n",
+    "\n",
+    "    t_span = [0, num_steps * dt]\n",
+    "    t_eval = np.arange(0.0, num_steps * dt, dt)\n",
+    "\n",
+    "    solution_obj = solve_ivp(\n",
+    "        fun=lorenz, \n",
+    "        t_span=t_span, \n",
+    "        y0=initial_state, \n",
+    "        args=(sigma, rho, beta),\n",
+    "        t_eval=t_eval\n",
+    "    )\n",
+    "    \n",
+    "    solution = solution_obj.y.T\n",
+    "    \n",
+    "    return solution\n",
+    "\n",
+    "def plot_lorenz_attractor(data):\n",
+    "    fig = plt.figure(figsize=(12, 9))\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    \n",
+    "    x = data[:, 0]\n",
+    "    y = data[:, 1]\n",
+    "    z = data[:, 2]\n",
+    "    \n",
+    "    ax.plot(x, y, z, lw=0.5, color='deepskyblue')\n",
+    "    \n",
+    "    # Set titles and labels for clarity\n",
+    "    ax.set_title(\"Lorenz Attractor\", fontsize=16)\n",
+    "    ax.set_xlabel(\"X Axis\")\n",
+    "    ax.set_ylabel(\"Y Axis\")\n",
+    "    ax.set_zlabel(\"Z Axis\")\n",
+    "    \n",
+    "    plt.show()\n",
+    "\n",
     "def mackey_glass_discrete(N=10000, tau=17, beta=0.2, gamma=0.1, n=10, x0=1.2):\n",
     "    size = N + tau + 1\n",
     "    x = np.empty(size, dtype=float)\n",
@@ -920,12 +955,39 @@
     "\n",
     "def chirp(x, phi=0.02, psi=5*1e-5): \n",
     "    x = np.asarray(x, dtype=float)\n",
-    "    return np.sin(2*np.pi*(phi*x + psi/2*x**2))"
+    "    return np.sin(2*np.pi*(phi*x + psi/2*x**2))\n",
+    "\n",
+    "def generate_timeseries(key, length): \n",
+    "    if key == 'logistic':\n",
+    "        print(\"Using Logistic Map dataset.\")\n",
+    "        series = logistic_map(r=3.8282, x_0=0.5, max_iter=length)\n",
+    "    elif key == 'weierstrass':\n",
+    "        print(\"Using Weierstrass Function dataset.\")\n",
+    "        x_vals = np.linspace(-2, 2, length)\n",
+    "        series = weierstrass(x=x_vals, a=0.5, b=3, max_n=15)\n",
+    "    elif key == 'doublesine': \n",
+    "        print(\"Using double sinusoid dataset.\")\n",
+    "        x_vals = np.linspace(-1000, 1000, length)\n",
+    "        series = double_sinusoid(x_vals)\n",
+    "    elif key == 'chirp': \n",
+    "        print(\"Using chirp dataset.\")\n",
+    "        x_vals = np.linspace(-1000, 1000, length)\n",
+    "        series = chirp(x_vals)\n",
+    "    elif key == 'macglass': \n",
+    "        print(\"Using discrete Mackey-Glass dataset.\")\n",
+    "        series = mackey_glass_discrete(N=length, tau=17, beta=0.2, gamma=0.1, n=10, x0=1.2)\n",
+    "    elif key == 'laser':\n",
+    "        print(\"Using the laser-logistic map dataset.\")\n",
+    "        series = laser_map(g=20, x0=0.5, max_iter=length)\n",
+    "    else:\n",
+    "        raise ValueError(\"Unknown dataset specified.\")\n",
+    "        \n",
+    "    return series "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "c9f94387-56f9-4f30-a383-0cdc35623d2e",
    "metadata": {},
    "outputs": [],
