Incorporate fixes from main

--- a/random_shannon_fcns.ipynb
+++ b/random_shannon_fcns.ipynb
@@ -447,8 +447,12 @@
     "    return mse, r2, X_hat\n",
     "\n",
     "# needs to be fixed\n",
-    "def pca_cross_recon_loss(X, pca_enc, pca_dec, k): #also use it two compare subspace alignment\n",
-    "    # k number of prin. comp.\n",
+    "def pca_cross_recon_loss(X, pca_enc, pca_dec, k): \n",
+    "    \"\"\"\n",
+    "        Calculates cross reconstruction loss for PCA. If pca_enc, pca_dec come from the same affine PCA transformation\n",
+    "        then it returns the regular reconstruction loss. They are related to each other by \n",
+    "        Z = (X - mu)B and X = ZB^T + mu\n",
+    "    \"\"\"\n",
     "    B_enc, mu_enc = pca_enc.components_[:k].T, pca_enc.mean_\n",
     "    B_dec, mu_dec = pca_dec.components_[:k].T, pca_dec.mean_\n",
     "\n",
@@ -863,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "4a51657a-4a26-4bec-86a8-4124db632522",
    "metadata": {},
    "outputs": [],
@@ -876,7 +880,7 @@
     "        traj.append(x)\n",
     "    return np.array(traj, dtype=np.float32)\n",
     "\n",
-    "def laser(g, x_0, max_iter=1000):\n",
+    "def laser_map(g, x_0, max_iter=1000):\n",
     "    \"\"\"Generates a time series using the logistic map equation.\"\"\"\n",
     "    traj = [x_0]\n",
     "    for i in range(1, max_iter):\n",
@@ -899,6 +903,41 @@
     "    dzdt = x * y - beta * z\n",
     "    return [dxdt, dydt, dzdt]\n",
     "\n",
+    "def generate_lorenz(initial_state=[1.0, 0.0, 0.0], sigma=10.0, rho=28.0, beta=8.0/3.0, dt=0.01, num_steps=10000):\n",
+    "\n",
+    "    t_span = [0, num_steps * dt]\n",
+    "    t_eval = np.arange(0.0, num_steps * dt, dt)\n",
+    "\n",
+    "    solution_obj = solve_ivp(\n",
+    "        fun=lorenz, \n",
+    "        t_span=t_span, \n",
+    "        y0=initial_state, \n",
+    "        args=(sigma, rho, beta),\n",
+    "        t_eval=t_eval\n",
+    "    )\n",
+    "    \n",
+    "    solution = solution_obj.y.T\n",
+    "    \n",
+    "    return solution\n",
+    "\n",
+    "def plot_lorenz_attractor(data):\n",
+    "    fig = plt.figure(figsize=(12, 9))\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    \n",
+    "    x = data[:, 0]\n",
+    "    y = data[:, 1]\n",
+    "    z = data[:, 2]\n",
+    "    \n",
+    "    ax.plot(x, y, z, lw=0.5, color='deepskyblue')\n",
+    "    \n",
+    "    # Set titles and labels for clarity\n",
+    "    ax.set_title(\"Lorenz Attractor\", fontsize=16)\n",
+    "    ax.set_xlabel(\"X Axis\")\n",
+    "    ax.set_ylabel(\"Y Axis\")\n",
+    "    ax.set_zlabel(\"Z Axis\")\n",
+    "    \n",
+    "    plt.show()\n",
+    "\n",
     "def mackey_glass_discrete(N=10000, tau=17, beta=0.2, gamma=0.1, n=10, x0=1.2):\n",
     "    size = N + tau + 1\n",
     "    x = np.empty(size, dtype=float)\n",
@@ -916,7 +955,87 @@
     "\n",
     "def chirp(x, phi=0.02, psi=5*1e-5): \n",
     "    x = np.asarray(x, dtype=float)\n",
-    "    return np.sin(2*np.pi*(phi*x + psi/2*x**2))"
+    "    return np.sin(2*np.pi*(phi*x + psi/2*x**2))\n",
+    "\n",
+    "def generate_timeseries(key, length): \n",
+    "    if key == 'logistic':\n",
+    "        print(\"Using Logistic Map dataset.\")\n",
+    "        series = logistic_map(r=3.8282, x_0=0.5, max_iter=length)\n",
+    "    elif key == 'weierstrass':\n",
+    "        print(\"Using Weierstrass Function dataset.\")\n",
+    "        x_vals = np.linspace(-2, 2, length)\n",
+    "        series = weierstrass(x=x_vals, a=0.5, b=3, max_n=15)\n",
+    "    elif key == 'doublesine': \n",
+    "        print(\"Using double sinusoid dataset.\")\n",
+    "        x_vals = np.linspace(-1000, 1000, length)\n",
+    "        series = double_sinusoid(x_vals)\n",
+    "    elif key == 'chirp': \n",
+    "        print(\"Using chirp dataset.\")\n",
+    "        x_vals = np.linspace(-1000, 1000, length)\n",
+    "        series = chirp(x_vals)\n",
+    "    elif key == 'macglass': \n",
+    "        print(\"Using discrete Mackey-Glass dataset.\")\n",
+    "        series = mackey_glass_discrete(N=length, tau=17, beta=0.2, gamma=0.1, n=10, x0=1.2)\n",
+    "    elif key == 'laser':\n",
+    "        print(\"Using the laser-logistic map dataset.\")\n",
+    "        series = laser_map(g=20, x0=0.5, max_iter=length)\n",
+    "    else:\n",
+    "        raise ValueError(\"Unknown dataset specified.\")\n",
+    "        \n",
+    "    return series "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "c9f94387-56f9-4f30-a383-0cdc35623d2e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_bifur_logistic(param_values, x0=0.5, iter_trans=1000, iter_plot=256):\n",
+    "    \"\"\"\n",
+    "        Plots the bifurcation diagram for logistic map.\n",
+    "    \"\"\"\n",
+    "    iter_total = iter_trans + iter_plot\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(15,8), dpi=150)\n",
+    "\n",
+    "    for r in param_values:\n",
+    "        X = logistic_map(r, x0, iter_total)\n",
+    "        attractors = X[iter_trans:]\n",
+    "        plot_values_r = np.full(iter_plot, r)\n",
+    "\n",
+    "        ax.plot(plot_values_r, attractors,\n",
+    "                marker=',', color='black', linestyle='none', alpha=0.5)\n",
+    "\n",
+    "    ax.set_title(\"Bifurcation Diagram of the Logistic Map\", fontsize=16)\n",
+    "    ax.set_xlabel(\"Growth Rate Parameter (r)\", fontsize=12)\n",
+    "    ax.set_ylabel(\"Equilibrium Population (x)\", fontsize=12)\n",
+    "    ax.set_xlim(param_values[0], param_values[-1])\n",
+    "    ax.set_ylim(0, 1)\n",
+    "    plt.show()\n",
+    "\n",
+    "def plot_bifur_laser(param_values, x0=0.5, iter_trans=1000, iter_plot=256):\n",
+    "    \"\"\"\n",
+    "        Plots the bifurcation diagram for logistic map.\n",
+    "    \"\"\"\n",
+    "    iter_total = iter_trans + iter_plot\n",
+    "\n",
+    "    fig, ax = plt.subplots(figsize=(15,8), dpi=150)\n",
+    "\n",
+    "    for r in param_values:\n",
+    "        X = laser_map(r, x0, iter_total)\n",
+    "        attractors = X[iter_trans:]\n",
+    "        plot_values_r = np.full(iter_plot, r)\n",
+    "\n",
+    "        ax.plot(plot_values_r, attractors,\n",
+    "                marker=',', color='black', linestyle='none', alpha=0.5)\n",
+    "\n",
+    "    ax.set_title(\"Bifurcation Diagram of the Logistic Map\", fontsize=16)\n",
+    "    ax.set_xlabel(\"Growth Rate Parameter (r)\", fontsize=12)\n",
+    "    ax.set_ylabel(\"Equilibrium Population (x)\", fontsize=12)\n",
+    "    ax.set_xlim(param_values[0], param_values[-1])\n",
+    "    plt.show()"
    ]
   }
  ],
